paragraph collapsing margins bug fixed

--- a/assets/components/atoms/paragraph/_paragraph.scss
+++ b/assets/components/atoms/paragraph/_paragraph.scss
@@ -6,5 +6,6 @@ p {
     font-size: ms(0);
     line-height: 1.44;
     padding: 0;
-    margin: 0 0 spacing(base) 0;
+    padding: 0 0 spacing(base) 0;
+    margin: 0;
 }
